# lunchable-primelunch

./: .pre-commit-config.yaml  .releaserc.json  LICENSE  README.md  Taskfile.yaml  mkdocs.yaml  pyproject.toml  requirements.txt
.github/workflows/: publish.yaml  test.yaml  tests.yaml
docs/: gen_pages.py  index.md
lunchable_primelunch/: __about__.py  __main__.py  cli.py  primelunch.py
requirements/: requirements-all.py3.10.txt  requirements-all.py3.11.txt  requirements-all.py3.12.txt  requirements-all.py3.13.txt  requirements-all.py3.8.txt  requirements-all.py3.9.txt  requirements-docs.txt  requirements-lint.txt  requirements-test.txt
tests/: __init__.py  test_cli.py  test_primelunch.py
